add spelling ck to delete

--- a/Wednesday_Lesson_Inclass-Updated-Lecture.ipynb
+++ b/Wednesday_Lesson_Inclass-Updated-Lecture.ipynb
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1012,51 +1012,33 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Enter what you want to do. \n",
-      "The choices are: \n",
+      "Enter what you want to do - the choices are: \n",
       "Show / Add / Delete or Quit: add\n",
       "\n",
       "Enter item name: eggs\n",
       "\n",
-      "Enter what you want to do. \n",
-      "The choices are: \n",
+      "Enter what you want to do - the choices are: \n",
       "Show / Add / Delete or Quit: add\n",
       "\n",
       "Enter item name: butter\n",
       "\n",
-      "Enter what you want to do. \n",
-      "The choices are: \n",
-      "Show / Add / Delete or Quit: show\n",
-      "\n",
-      "\n",
-      "['eggs', 'butter']\n",
-      "\n",
-      "Enter what you want to do. \n",
-      "The choices are: \n",
-      "Show / Add / Delete or Quit: delete\n",
-      "\n",
-      "Enter item name an that you want to delete from your cart (this deletes all occurences) butter\n",
-      "\n",
-      "Enter what you want to do. \n",
-      "The choices are: \n",
-      "Show / Add / Delete or Quit: show\n",
-      "\n",
-      "\n",
-      "['eggs']\n",
-      "\n",
-      "Enter what you want to do. \n",
-      "The choices are: \n",
+      "Enter what you want to do - the choices are: \n",
       "Show / Add / Delete or Quit: quit\n"
      ]
     }
    ],
    "source": [
+    "#from IPython.display import clear_output\n",
+    "#clear_output(wait=True)   \n",
+    "\n",
     "def shoppingCart():\n",
+    "    \"\"\"Creates a list of purchases from user input.\n",
+    "        the user can show/add/delete/quit\"\"\"   \n",
     "    items = [] \n",
-    "         \n",
+    "    \n",
     "    while True:\n",
-    "        print(\"\\nEnter what you want to do. \")\n",
-    "        print(\"The choices are: \")\n",
+    "       \n",
+    "        print(\"\\nEnter what you want to do - the choices are: \")     \n",
     "        action = input(\"Show / Add / Delete or Quit: \")\n",
     "        if action.lower() == 'quit':\n",
     "            break      \n",
@@ -1075,13 +1057,21 @@
     "                continue\n",
     "            else:\n",
     "                items_delete = input(\"\\nEnter item name an that you want to delete from your cart (this deletes all occurences) \")         \n",
-    "                while items_delete in items:\n",
-    "                    items.remove(items_delete)\n",
+    "                if items_delete not in items:\n",
+    "                    print(\"\\nItems could not be found in your cart, please try again\")\n",
+    "                    items_delete = input(\"\\nEnter item name an that you want to delete from your cart (this deletes all occurences) \")\n",
+    "                    while items_delete in items:\n",
+    "                        items.remove(items_delete)\n",
+    "                else:\n",
+    "                    while items_delete in items:\n",
+    "                        items.remove(items_delete)\n",
+    "                                     \n",
     "        else:\n",
     "            print('Your choice of what you wanted to do is not valid, please try again')\n",
     "            break\n",
     "\n",
-    "shoppingCart()\n"
+    "shoppingCart()\n",
+    "\n"
    ]
   },
   {
@@ -1100,27 +1090,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Please enter what kind of calculation you are looking for \n",
+      "Area or Circumference? area\n",
+      "Length: 4\n",
+      "Width:4\n",
+      "\n",
+      "The square footage or area with a length of 4.0 and a width of 4.0 is 16.0\n"
+     ]
+    }
+   ],
    "source": [
-    "from IPython.display import clear_output\n",
+    "#from IPython.display import clear_output\n",
     "from math import pi as p\n",
     "from calculate import circumference, area\n",
     "\n",
     "def doCalculate():\n",
-    "    clear_output()\n",
+    "    \"\"\" Calculates area or circumference based\n",
+    "        on user choice\"\"\"\n",
     "    try:\n",
     "            print(\"\\nPlease enter what kind of calculation you are looking for \")\n",
     "            calc_choice = input(\"Area or Circumference? \")\n",
-    "            if (calc_choice.lower().rstrip()) == 'area':\n",
+    "            if (calc_choice.lower().strip()) == 'area':\n",
     "                length = float(input('Length: '))\n",
-    "                width = float(input('Width:' )) \n",
+    "                width = float(input('Width: ' )) \n",
     "                return area(length, width)\n",
-    "            elif(calc_choice.lower().rstrip()) == 'circumference':\n",
+    "            elif(calc_choice.lower().strip()) == 'circumference':\n",
     "                print(\"\\nWhat type of measurement do you have? \")\n",
     "                type = input(\"Radius or Diameter? \")\n",
-    "                if (type.lower().rstrip()) == 'radius':\n",
+    "                if (type.lower().strip()) == 'radius':\n",
     "                    radius = float(input('Radius: '))\n",
     "                    return circumference(radius)\n",
     "                else:\n",
@@ -1132,6 +1137,7 @@
     "            print (\"ERROR - please check that you measurement entries are numeric\")\n",
     "        \n",
     "print(doCalculate())\n",
+    "\n",
     "\n"
    ]
   }
